namespace FuzzyLogic.Engine.Defuzzify;

public enum DefuzzificationMethod
{
    Height,
    FirstOfMaxima,
    LeastOfMaxima,
    MeanOfMaxima,
    CentreOfGravity,
    CentreOfSums,
    CentreOfArea
}