@startuml

interface ILinguisticBase {
IDictionary<string, IVariable> LinguisticVariables
+ILinguisticBase Add(IVariable variable)
+ILinguisticBase AddAll(ICollection<IVariable> variable)
+bool ContainsLinguisticVariable(string variableName)
+IVariable? RetrieveLinguisticVariable((string variableName)
+bool ContainsLinguisticEntry(string variableName, string entryName)
+IRealFunction? RetrieveLinguisticEntry(string variableName, string entryName)
+{static} ILinguisticBase Create()
}

interface IRuleBase {
ICollection<IRule> ProductionRules
+IRuleBase Add(IRule rule)
+IRuleBase AddAll(ICollection<IRule> rules)
+ICollection<IRule> FindRulesWithPremise(string variableName)
+ICollection<IRule> FindRulesWithConclusion(string variableName)
+IRuleBase FilterDuplicatedConclusions(string variableName)
+{static} IRuleBase Create()
}

class LinguisticBase

ILinguisticBase <|-- LinguisticBase

class RuleBase

IRuleBase <|-- RuleBase

interface IKnowledgeBase {
ILinguisticBase LinguisticBase
IRuleBase RuleBase
+{static} IKnowledgeBase Create()
+{static} IKnowledgeBase Create(ILinguisticBase linguisticBase, IRuleBase ruleBase)
}

class KnowledgeBase

IKnowledgeBase <|---r KnowledgeBase

IKnowledgeBase *-- ILinguisticBase
IKnowledgeBase *-- IRuleBase

interface IWorkingMemory {
IDictionary<string, double> Facts
EntryResolutionMethod Method
+bool ContainsFact(string key)
+double? RetrieveValue(string key)
+void AddFact(string key, double value)
+void UpdateFact(string key, double value)
+bool RemoveFact(string key);
+{static} IWorkingMemory Create(EntryResolutionMethod method)
+{static} IWorkingMemory Create(IDictionary<string, double> facts, EntryResolutionMethod method)
+{static} IWorkingMemory CreateFromFile(string filePath, EntryResolutionMethod method)
}

enum EntryResolutionMethod {
Preserve
Create
}

IWorkingMemory *-- EntryResolutionMethod

class WorkingMemory

IWorkingMemory <|---r WorkingMemory

interface IDefuzzifier {
+double Defuzzify()
}

IDefuzzifier <|---u Height
IDefuzzifier <|---u MeanOfMaxima
IDefuzzifier <|---u CenterOfGravity
IDefuzzifier <|---u CenterOfArea
IDefuzzifier <|---u CenterOfSums

enum RuleResolutionMethod {
Default
Specificity
Recency
}

interface IEngine {
IKnowledgeBase KnowledgeBase
IWorkingMemory WorkingMemory
IDefuzzifier Defuzzifier
RuleResolutionMethod RuleResolution
}

class InferenceEngine

IEngine <|---r InferenceEngine

IEngine *---l IDefuzzifier
IEngine *-- IKnowledgeBase
IEngine *-- IWorkingMemory
IEngine *---d RuleResolutionMethod
/'
enum DefuzzificationMethod {
HeightMethod
MeanOfMaximaMethod
CenterOfGravityMethod
CenterOfAreaMethod
CenterOfSumsMethod
}
'/
@enduml